--- a/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.tpl.html
@@ -14,6 +14,7 @@
                                                 data-input-value="$ctrl.functionData.metadata.name"
                                                 data-validation-is-required="true"
                                                 data-validation-pattern="ctrl.validationPatterns.functionName"
+                                                data-input-model-options="$ctrl.inputModelOptions"
                                                 data-form-object="$ctrl.functionFromScratchForm"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                                 data-placeholder-text="Type function name"></igz-validating-input-field>
