--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
@@ -11,6 +11,7 @@
                                             data-form-object="$ctrl.functionFromTemplateForm"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-validation-pattern="ctrl.validationPatterns.functionName"
+                                            data-input-model-options="$ctrl.inputModelOptions"
                                             data-placeholder-text="Type function name"></igz-validating-input-field>
             </div>
         </div>
