--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
@@ -5,7 +5,7 @@
              data-ng-scrollbars>
             <div class="row">
                 <div class="logger-dropdown">
-                    <span class="label">Logger lever</span>
+                    <span class="label">Logger level</span>
                     <igz-default-dropdown data-selected-item="$ctrl.version.spec.loggerSinks[0].level"
                                           data-select-property-only="type"
                                           data-dropdown-type="severity"
