--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-data-bindings/version-configuration-data-bindings.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-data-bindings/version-configuration-data-bindings.tpl.html
@@ -20,6 +20,7 @@
                     <div class="igz-scrollable-container" data-ng-scrollbars>
                         <ncl-collapsing-row data-ng-repeat="binding in $ctrl.bindings"
                                                     data-item="binding"
+                                                    data-type="binding"
                                                     data-action-handler-callback="$ctrl.handleAction(actionType, selectedItem)">
                             <ncl-edit-item class="common-table-cells-container edit-binding-row"
                                            data-item="binding"
