--- a/src/nuclio/projects/project/functions/version/version-trigger/version-trigger.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-trigger/version-trigger.tpl.html
@@ -17,6 +17,7 @@
                 <div class="igz-scrollable-container" data-ng-scrollbars>
                     <ncl-collapsing-row data-ng-repeat="trigger in $ctrl.triggers"
                                         data-item="trigger"
+                                        data-type="trigger"
                                         data-action-handler-callback="$ctrl.handleAction(actionType, selectedItem)">
                         <ncl-edit-item class="common-table-cells-container edit-binding-row"
                                        data-item="trigger"
