--- a/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
@@ -66,7 +66,8 @@
                                 data-selected-theme="$ctrl.bodyTheme"
                                 data-language="json"
                                 data-mini-monaco="true"
-                                data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode)"></ncl-monaco>
+                                data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode)"
+                                data-read-only="false"></ncl-monaco>
                 </div>
                 <div data-ng-if="$ctrl.contentType === 'text/plain'"
                      class="field-content">
