--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -72,7 +72,8 @@
                             data-mini-monaco="false"
                             data-selected-theme="$ctrl.selectedTheme.id"
                             data-language="$ctrl.selectedRuntime.language"
-                            data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode, language)"></ncl-monaco>
+                            data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode, language)"
+                            data-read-only="false"></ncl-monaco>
             </div>
         </div>
     </div>
