IG-1782 [Nuclio] Response panel should be clearer that this is a response

--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -116,7 +116,7 @@
             <span class="result-status-icon"
                   data-ng-class="$ctrl.isInvocationSuccess ? 'igz-icon-tick-round' : 'igz-icon-block'">
             </span>
-                <span class="result-state">Execution results: {{$ctrl.testResult.status.statusText}}</span>
+                <span class="result-state">Response: {{$ctrl.testResult.status.statusText}}</span>
             </div>
 
             <div class="ncl-execution-result-block">
