--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -41,6 +41,7 @@
                                           data-placeholder=""
                                           data-decimal-number="0"
                                           data-value-step="1"
+                                          data-validation-is-required="true"
                                           data-min-value="0"
                                           data-max-value="$ctrl.maxReplicas"></igz-number-input>
                         <div class="values-label">
@@ -54,6 +55,7 @@
                                           data-placeholder=""
                                           data-decimal-number="0"
                                           data-value-step="1"
+                                          data-validation-is-required="true"
                                           data-min-value="$ctrl.minReplicas"></igz-number-input>
                         <div class="values-label">
                             max
