IG-1812 [Nuclio] Function exported file extension should be ".yaml" not ".yml", have 2 spaces instead of 4

--- a/src/nuclio/projects/project/functions/create-function/function-import/function-import.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-import/function-import.tpl.html
@@ -6,7 +6,7 @@
         <input class="function-import-input"
                type="file"
                id="function-import"
-               accept=".yml">
+               accept=".yml, .yaml">
     </div>
 
     <div class="function-import-monaco">
