Changed logic selecting function's templates

--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
@@ -6,7 +6,7 @@
                 <igz-validating-input-field class="nuclio-validating-input"
                                             data-field-type="input"
                                             data-input-name="name"
-                                            data-input-value="$ctrl.functionData.metadata.name"
+                                            data-input-value="$ctrl.functionName"
                                             data-validation-is-required="true"
                                             data-form-object="$ctrl.functionFromTemplateForm"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
