--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -45,11 +45,11 @@
                             <li data-ng-if="$ctrl.selectedFunctionEvent">
                                 <a class="icon-font-layer" href="#"
                                    data-ng-click="$ctrl.openFunctionEventDialog(false)">Edit
-                                    test event</a>
+                                    function event</a>
                             </li>
                             <li data-ng-if="$ctrl.selectedFunctionEvent">
                                 <a class="icon-font-layer" href="#" data-ng-click="$ctrl.deleteFunctionEvent()">Delete
-                                    event</a>
+                                    function event</a>
                             </li>
                         </ul>
                     </div>
