IG-1820 [Nuclio] [Functions list] Splash screen delay, while deleting function.

--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -118,6 +118,7 @@
                                 <div data-igz-show-hide-search-item="function">
                                     <ncl-function-collapsing-row data-function="function"
                                                                  data-project="$ctrl.project"
+                                                                 data-is-splash-showed="$ctrl.isSplashShowed"
                                                                  data-external-address="$ctrl.externalIPAddress"
                                                                  data-functions-list="$ctrl.functions"
                                                                  data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)">
