--- a/src/nuclio/projects/project/functions/create-function/create-function.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/create-function.tpl.html
@@ -8,9 +8,9 @@
             <div class="new-function-header">
                 <div class="title">Start a new function</div>
 
-                <div class="new-function-type">
-                    <div class="function-from-scratch-wrapper">
-                        <div class="function-from-scratch"
+                <div class="new-function-types">
+                    <div class="type-wrapper">
+                        <div class="type-template"
                              data-ng-click="$ctrl.selectFunctionType('from_scratch')"
                              data-ng-class="{'selected': $ctrl.isTypeSelected('from_scratch')}">
                             <div class="function-type-icon">
@@ -23,8 +23,8 @@
                         </div>
                     </div>
 
-                    <div class="function-from-template-wrapper">
-                        <div class="function-from-template"
+                    <div class="type-wrapper">
+                        <div class="type-template function-from-template"
                              data-ng-click="$ctrl.selectFunctionType('from_template')"
                              data-ng-class="{'selected': $ctrl.isTypeSelected('from_template')}">
                             <div class="function-type-icon">
@@ -39,14 +39,14 @@
                         </div>
                     </div>
 
-                    <div class="function-import-wrapper">
-                        <div class="function-import"
+                    <div class="type-wrapper">
+                        <div class="type-template"
                              data-ng-click="$ctrl.selectFunctionType('import')"
                              data-ng-class="{'selected': $ctrl.isTypeSelected('import')}">
                             <div class="function-type-icon">
                                 <span class="ncl-icon-import icon"></span>
                             </div>
-                            <div class="function-type-info">
+                            <div class="function-type-info function-import">
                                 <div class="type-title">Import</div>
                                 <div class="type-description">Upload a YAML file as a starting point for your nuclio function</div>
                             </div>
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-    <div class="new-function-type-wrapper">
+    <div class="function-type-content-wrapper">
         <div class="new-function-type-content">
             <ncl-function-from-scratch data-ng-if="$ctrl.isTypeSelected('from_scratch')"
                                        data-toggle-splash-screen="$ctrl.toggleSplashScreen(value)"
