refactoring number-input

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -41,6 +41,7 @@
                                           data-current-value="$ctrl.minReplicas"
                                           data-update-number-input-callback="$ctrl.numberInputCallback(newData, field)"
                                           data-update-number-input-field="minReplicas"
+                                          data-allow-empty-field="true"
                                           data-placeholder=""
                                           data-decimal-number="0"
                                           data-value-step="1"
@@ -55,6 +56,7 @@
                                           data-current-value="$ctrl.maxReplicas"
                                           data-update-number-input-callback="$ctrl.numberInputCallback(newData, field)"
                                           data-update-number-input-field="maxReplicas"
+                                          data-allow-empty-field="true"
                                           data-placeholder=""
                                           data-decimal-number="0"
                                           data-value-step="1"
